--- a/style.css
+++ b/style.css
@@ -21,67 +21,114 @@
     color: hsl(228, 45%, 44%);
 }
 
+body {
+    font-family: 'Lexend Deca', sans-serif;
+    height: 100%;
+    padding: 5rem 1.5rem;
+    position: relative;
+    background: hsl(0, 0%, 95%);
+}
+
+section.transport {
+    padding: 2.25rem;
+}
+
+section.sedans {
+    background: hsl(31, 77%, 52%);
+}
+
+section.suvs {
+    background: hsl(154, 100%, 22%);
+}
+
+section.luxury {
+    background: hsl(179, 100%, 13%);
+}
+
+.transport .car-img-type {
+    margin-bottom: 1.5rem;
+}
+
+.transport .car-title {
+    font-family: 'Big Shoulders Display', cursive;
+    text-transform: uppercase;
+    color: hsl(0, 0%, 95%);
+    margin-bottom: 1rem;
+}
+
+.transport .description {
+    font-size: 15px;
+    color: hsla(0, 0%, 100%, 0.75);
+    font-weight: 200;
+    line-height: 1.7;
+    margin-bottom: 1.25rem;
+}
+
+.transport .btn {
+    border-radius: 1.5rem;
+    background: hsl(0, 0%, 95%);
+    border: 0;
+    font-size: 15px;
+    padding: 1rem 1.5rem;
+}
+
+.transport .btn-learn-more-sedans {
+    color: hsl(31, 77%, 52%);
+}
+
+.transport .btn-learn-more-suvs {
+    color: hsl(154, 100%, 22%);
+}
+
+.transport .btn-learn-more-luxury {
+    color: hsl(179, 100%, 13%);
+}
+
 @media (min-width: 375px) and (max-width: 662px) {
-    body {
-        font-family: 'Lexend Deca', sans-serif;
-        height: 100%;
-        padding: 5rem 1.5rem;
-        position: relative;
-        background: hsl(0, 0%, 95%);
-    }
     .container {
-        /* border-radius: 8px; */
         display: grid;
         grid-template-columns: 1fr;
         grid-auto-rows: 1fr;
     }
     section.transport {
-        background-color: #eee;
         padding: 2.25rem;
     }
     section.sedans {
-        background: hsl(31, 77%, 52%);
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
     }
-    section.suvs {
-        background: hsl(154, 100%, 22%);
-    }
     section.luxury {
-        background: hsl(179, 100%, 13%);
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
     }
-    .transport .car-img-type {
-        margin-bottom: 1.5rem;
+}
+
+@media (min-width: 900px) and (max-width: 1440px) {
+    body {
+        height: 100vh;
+        padding: 0;
+        display: grid;
     }
-    .transport .car-title {
-        font-family: 'Big Shoulders Display', cursive;
-        text-transform: uppercase;
-        color: hsl(0, 0%, 95%);
-        margin-bottom: 1rem;
-    }
-    .transport .description {
-        font-size: 15px;
-        color: hsla(0, 0%, 100%, 0.75);
-        font-weight: 200;
-        line-height: 1.7;
-        margin-bottom: 1.25rem;
+    .container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-rows: 450px;
+        width: 70%;
+        margin: auto;
+        position: relative;
     }
     .transport .btn {
-        border-radius: 1.5rem;
-        background: hsl(0, 0%, 95%);
-        padding: 1rem 1.5rem;
-        border: 0;
-        font-size: 15px;
+        padding: 1.25rem 3rem;
+        border-radius: 2.5rem;
+        position: absolute;
+        bottom: 2.25rem;
     }
-    .transport .btn-learn-more-sedans {
-        color: hsl(31, 77%, 52%);
+    .transport.sedans {
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
     }
-    .transport .btn-learn-more-suvs {
-        color: hsl(154, 100%, 22%);
-    }
-    .transport .btn-learn-more-luxury {
-        color: hsl(179, 100%, 13%);
+    .transport.luxury {
+        border-top-right-radius: 8px;
+        border-bottom-right-radius: 8px;
     }
 }
